Fixed wrapping headers line

--- a/teststyle.css
+++ b/teststyle.css
@@ -11,7 +11,7 @@ table * { vertical-align: top }
 
 
 main { max-width:640px;clear:both }
-main h2 { max-width:400px } 
+main h2 { max-width:100% } 
 main h4 { font-family:monospace } 
 main ul { margin:0px 0px 16px 30px }
 main ol { margin:0px 0px 16px 30px }
